Update single tag/year/category pages

--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -30,7 +30,7 @@ layout: archive
   {% for tag in site.tags %}
     {% if tag[1].size == i %}
       <section id="{{ tag[0] | slugify | downcase }}" class="taxonomy__section">
-        <h2 class="archive__subtitle">{{ tag[0] }}</h2>
+	      <h2 class="archive__subtitle"><a href="{{site.baseurl}}/tags/{{ tag[0] | slugify | downcase }}" style="color:#000000">{{ tag[0] }}</a></h2>
         <div class="entries-{{ entries_layout }}">
           {% for post in tag.last %}
             {% include archive-single.html type=entries_layout %}
