--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -30,7 +30,7 @@ layout: archive
   {% for category in site.categories %}
     {% if category[1].size == i %}
       <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
-        <h2 class="archive__subtitle">{{ category[0] }}</h2>
+	      <h2 class="archive__subtitle"><a href="{{site.baseurl}}/categories/{{ category[0] | slugify | downcase }}" style="color:#000000">{{ category[0] }}</a></h2>
         <div class="entries-{{ entries_layout }}">
           {% for post in category.last %}
             {% include archive-single.html type=entries_layout %}
