--- a/_layouts/year-archive-taxonomy.html
+++ b/_layouts/year-archive-taxonomy.html
@@ -20,7 +20,7 @@ author_profile: true
 
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
-      <h1 id="page-title" class="page__title">{{ page.title }}</h1>
+      <h1 id="page-title" class="page__title">{{ page.date|date: "%Y" }}</h1>
     {% endunless %}
     {% for post in page.posts %}
       {% include archive-single.html %}
