--- a/_includes/comments-providers/disqus.html
+++ b/_includes/comments-providers/disqus.html
@@ -1,6 +1,7 @@
 {% if site.comments.disqus.shortname %}
   <script>
     var disqus_config = function () {
+      this.language = "zh_TW";
       this.page.url = "{{ page.url | absolute_url }}";  /* Replace PAGE_URL with your page's canonical URL variable */
       this.page.identifier = "{{ page.id }}"; /* Replace PAGE_IDENTIFIER with your page's unique identifier variable */
     };
