--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -19,7 +19,7 @@ layout: archive
 {% assign postsByYear = site.posts | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' %}
 {% for year in postsByYear %}
   <section id="{{ year.name }}" class="taxonomy__section">
-	  <h2 class="archive__subtitle"><a href="{{site.baseurl}}/year-archives/{{ year.name }}" style="color:#000000">{{ year.name }}</a></h2>
+	  <h2 class="archive__subtitle">{{ year.name }}</h2>
     <div class="entries-{{ entries_layout }}">
       {% for post in year.items %}
         {% include archive-single.html type=entries_layout %}
